# binary-dealer

./: Cargo.toml  README.md
assets/: getme  index.html
src/: main.rs
tests/: basic.rs
