[package]
name = "binary-dealer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-server = {version = "0.7.1", features = ["tls-rustls"]}
tokio = { version = "1.42.0", features = ["full"]}
tower-http = {version = "0.6.2", features = ["fs", "trace"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = {version = "0.1", features = ["attributes"]}
